css/style.css
h1 {
	padding: 8px 10px;
	color: #FFF;
	border-radius: 4px;
	margin-bottom: 30px;
	font-family: 'Raleway', sans-serif;
	background-color: #de411b;
}

.img-logo {
	max-width: 400px;
	margin-bottom:40px;
	margin-top: 30px;
}

ul {
	margin-bottom: 20px;
}

li {
	list-style-type: disc;
	font-size: 1.5rem;
}

a.accordion-toggle {
		display: block;
		padding: 10px;
		margin: -10px;
		text-decoration: none;
}

a.accordion-toggle:hover {
	text-decoration: none;
}

.panel-default>.panel-heading:hover {
	background-color: #e5e5e5;

}

.btn {
    margin-bottom: 4px;
}
.panel-heading .accordion-toggle:after {
    /* symbol for "opening" panels */
    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
    float: right;        /* adjust as needed */
    color: grey;         /* adjust as needed */
}
.panel-heading .accordion-toggle.collapsed:after {
    /* symbol for "collapsed" panels */
    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
}

.typewriter {
	background-color: #de411b;
	border-radius: 6px;

}

.typewriter h1 {
	overflow: hidden; 
	white-space: nowrap;
	margin: 0 auto 40px; 
	letter-spacing: .05em; 
	animation: 
	  typing 3.5s steps(40, end),
	  blink-caret .75s step-end infinite;
  }

  .switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
}

.switch input { 
	opacity: 0;
	width: 0;
	height: 0;
}

.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	-webkit-transition: .4s;
	transition: .4s;
}

.slider:before {
	position: absolute;
	content: "";
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	-webkit-transition: .4s;
	transition: .4s;
}

/* Paginator */

	.pagination a {
		color: black;
		float: left;
		padding: 4px 8px;
		text-decoration: none;
		transition: background-color .3s;
	}
	
	.pagination a.active {
		background-color: dodgerblue;
		color: white;
	}
	
	.pagination a:hover:not(.active) {
		background-color: #ddd;
	}

	/* Input Range slider */
	.slider-square {
		-webkit-appearance: none;
		width: 100%;
		height: 24px;
		background: #d3d3d3;
		outline: none;
		opacity: 0.7;
		-webkit-transition: opacity .15s ease-in-out;
		transition: opacity .15s ease-in-out;
	}

/*ToolTips*/
.tooltip {
	position: relative;
	display: inline-block;
	opacity: 1;
  }
  
  .tooltip .tooltiptext {
	visibility: hidden;
	width: 120px;
	background-color: #555;
	color: #fff;
	text-align: center;
	border-radius: 6px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	bottom: 125%;
	left: 50%;
	margin-left: -60px;
	transition: opacity 0.3s;
  }
  
  .tooltip .tooltiptext::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: #555 transparent transparent transparent;
  }
  
  .tooltip:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
  }

/* Notification */
.notification {
	background-color: #555;
	color: white;
	text-decoration: none;
	padding: 10px 26px;
	position: relative;
	display: inline-block;
	border-radius: 2px;
  }
  
  .notification:hover {
	background:grey;
  }
  
  .notification .badge {
	position: absolute;
	top: -10px;
	right: -10px;
	padding: 5px 10px;
	border-radius: 50%;
	background-color:red;
	color: white;
  }

/* Progress Bar */
#myProgress {
	width: 100%;
	background-color: #ddd;
  }
  
  #myBar {
	width: 1%;
	height: 15px;
	background-color: #4CAF50;
  }

/* Breadcrumb */

	ul.breadcrumb {
		padding: 10px 16px;
		list-style: none;
		background-color: #eee;
	}
	ul.breadcrumb li {
		display: inline;
		font-size: 12px;
	}
	ul.breadcrumb li+li:before {
		padding: 8px;
		color: black;
		content: "/\00a0";
	}
	ul.breadcrumb li a {
		color: #0275d8;
		text-decoration: none;
	}
	ul.breadcrumb li a:hover {
		color: #01447e;
		text-decoration: underline;
	}

input:checked + .slider {
	background-color: #2196F3;
}

input:focus + .slider {
	box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
	border-radius: 34px;
}

.slider.round:before {
	border-radius: 50%;
}
  
  /* The typing effect */
  @keyframes typing {
	from { width: 0 }
	to { width: 100% }
  }
  
  /* The typewriter cursor effect */
  @keyframes blink-caret {
	from, to { border-color: transparent }
	50% { border-color: orange; }
  }


  /* CSS Calendar */

  	.month {
		padding: 0 25px;
		width: 100%;
		background: #1abc9c;
		text-align: center;
	}
											
	.month ul {
		margin: 0;
		padding: 0;
	}
								
	.month ul li {
		color: white;
		font-size: 10px;
		text-transform: uppercase;
		letter-spacing: 3px;
		list-style: none;
	}

	.month .prev {
		float: left;
			padding-top: 0px;
		}
		
	.month .next {
		float: right;
		padding-top: 0px;
	}
		
	.weekdays {
		margin: 0;
		padding: 0px 0;
		background-color: #ddd;
	}
		
	.weekdays li {
		display: inline-block;
		width: 13.6%;
		color: #666;
		text-align: center;
	}
		
	.days {
		padding: 10px 0;
		background: #eee;
		margin: 0;
	}
		
	.days li {
		list-style-type: none;
		display: inline-block;
		width: 13.6%;
		text-align: center;
		margin-bottom: 5px;
		font-size:12px;
		color: #777;
	}
		
	.days li .active {
		padding: 5px;
		background: #1abc9c;
		color: white !important
	}
		
		/* Add media queries for smaller screens */
		@media screen and (max-width:720px) {
			.weekdays li, .days li {width: 13.1%;}
		}
		
		@media screen and (max-width: 420px) {
			.weekdays li, .days li {width: 12.5%;}
			.days li .active {padding: 2px;}
		}
		
		@media screen and (max-width: 90px) {
			.weekdays li, .days li {width: 12.2%;}
		}

